--- a/index.html
+++ b/index.html
@@ -357,14 +357,16 @@
                 </div>
                 
                 <div style="background-color: rgba(248, 180, 0, 0.05); padding: 15px; border-radius: 8px; border-left: 3px solid var(--accent);">
-                    <h3 style="margin-top: 0;">Festival Prizes & Award Money</h3>
-                    <p>Top-tier festivals offer cash prizes for award-winning shorts:</p>
+                    <h3 style="margin-top: 0;">Festival Recognition & Potential Prizes</h3>
+                    <p>We're targeting prestigious film festivals that provide valuable exposure:</p>
                     <ul>
-                        <li>Sundance, Tribeca, SXSW cash awards</li>
-                        <li>Genre festivals with monetary prizes</li>
-                        <li>Increased exposure from festival wins</li>
+                        <li>Major festivals like Tribeca, SXSW, Sundance, and Cannes</li>
+                        <li>Genre-specific festivals with dedicated horror/thriller categories</li>
+                        <li>Any cash awards from festivals would be shared with investors based on equity</li>
+                        <li>Executive Producers receive official credits in all festival submissions</li>
+                        <li>We will secure physical award replicas for Executive Producers when available</li>
                     </ul>
-                    <p><em>Prize money is shared among investors according to equity percentage.</em></p>
+                    <p><em>Festival recognition significantly increases the film's exposure and market value.</em></p>
                 </div>
                 
                 <div style="background-color: rgba(248, 180, 0, 0.05); padding: 15px; border-radius: 8px; border-left: 3px solid var(--accent);">
