--- a/index.html
+++ b/index.html
@@ -279,7 +279,10 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="nav-container">
-            <div class="logo">Red Fox Features</div>
+            <div class="logo" style="display: flex; align-items: center;">
+                <img src="https://raw.githubusercontent.com/mikecerisano/Investor/refs/heads/main/IMG_0069.png" alt="Red Fox Features Logo" style="height: 30px; margin-right: 10px;">
+                Red Fox Features
+            </div>
             <div class="nav-links">
                 <a href="#summary">Summary</a>
                 <a href="#investment">Investment</a>
@@ -291,7 +294,10 @@
     </nav>
 
     <div class="container">
-        <h1>Mimic - Investor Proposal</h1>
+        <h1>
+            <img src="https://raw.githubusercontent.com/mikecerisano/Investor/refs/heads/main/IMG_0069.png" alt="Red Fox Features Logo" style="height: 60px; margin-right: 15px; vertical-align: middle;">
+            Mimic - Investor Proposal
+        </h1>
         
         <div class="section" id="summary">
             <h2>1. Executive Summary</h2>
